Configure CI to trigger on master branch

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -2,7 +2,7 @@ name: Deploy to Render
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, main ]
   workflow_dispatch: # Manuel tetikleme için
 
 jobs:
